--- a/src/app/main/main-content/research-projects/research-projects.component.html
+++ b/src/app/main/main-content/research-projects/research-projects.component.html
@@ -34,15 +34,15 @@
 
               <tr>
                 <td class="table-year">Area</td>
-                <td>
-                  Immersive media display system, Multi-projection contents optimization 
+                <td *ngIf="project.area">
+                  {{project.area}}
                 </td>
               </tr>
 
               <tr>
                 <td class="table-year">Partners</td>
-                <td>
-                  KAI Co., CJ CGV Co
+                <td *ngIf="project.partners">
+                  {{ project.partners[0].name }}
                 </td>
               </tr>
 
@@ -59,12 +59,12 @@
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-2 project-funding">
-          <hr/>
+          <!-- <hr/>
           <p class="menu01">Funding</p>
-          <a [href]='project.funding?.link' class="menu02">{{project.funding?.name}}</a>
+          <a [href]='project.funding?.link' class="menu02">{{project.funding?.name}}</a> -->
           <hr/>
           <p class="menu01">Manager</p>
-          <a [routerLink]='["../people", "person", project.people_id]'>{{project.people?.name}}</a>
+          <a *ngIf="project.people" [routerLink]='["../people", "person", project.people.id]'>{{project.people?.name}}</a>
         </div>
 
       </div>
