--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
@@ -58,3 +58,60 @@
         font-size: 1rem;
     }
 }
+
+table {
+    a:link {
+        color: #F05A29;
+        text-decoration :none;
+    }
+
+    a:visited {
+        color: #FAAF40;
+        text-decoration :none;
+    }
+
+    a:active {
+        color: #0000FF;
+        text-decoration :none;
+    }
+
+    a:hover {
+        color: #FF3300;
+        text-decoration :none;
+    }
+
+    body {
+        font-family: 'Noto Sans KR';
+        font-size: 11pt;
+        margin: 80px;
+        margin-top: 70px;
+        margin-bottom: 70px;
+        color: #5a5a5a;
+    }
+
+    h1 {
+        font-size: 200%;
+        margin-top : 20px;
+        margin-bottom: 20px;
+        color: #645367;
+    }
+
+    h2 {
+        font-size: 150%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        color: #645367;
+    }
+
+    h3 {
+        font-size: 120%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    p {
+        margin-top: 0em;
+        margin-bottom: 5px;
+    }
+
+}
