--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,7 +137,14 @@
           <div class="">
 
             <div (click)='navigateTo(pub.id, 1)' *ngFor="let pub of publications$ | async" class="card issueCard pad pub-pad">
-              <img class="news-img card-img-top img-fluid" [srcset]="pub.img ? imgPath + pub.img : defaultImage" [src]=" imgPath + pub.img">
+
+              <!-- <img class="news-img card-img-top img-fluid" [srcset]="pub.img ? imgPath + pub.img : defaultImage" [src]=" imgPath + pub.img"> -->
+              <img *ngIf="pub.img" default="./../../assets/Contents/imgs/no_image.jpg" class="news-img card-img-top img-fluid" [srcset]="imgPath + pub.img" [src]=" imgPath + pub.img">
+
+          <!-- <img default="./../../../../assets/Contents/imgs/no_image.jpg" 
+              [srcset]= 'imgPath + publication.img + " 800w, " +
+                        imgPath+ publication.smallimg + " 300w "'
+              sizes="(min-width:990px) 300px, 800px"> -->
               <div class="card-block">
                 <h4 class="card-title">{{pub.title}}</h4>
                 <p class="card-text desc">{{pub.conference}}</p>
@@ -177,8 +184,13 @@
 
           
           <div class="partners-columns">
+
+
             <div *ngFor="let partner of partners$ | async" class="partner-img-box">
-              <img class="partner-img" [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+              <a [href]='partner.link' class="partner-img">
+                <img class="partner-img" default='./../../assets/Contents/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+              </a>
+              <!-- <img class="partner-img" [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo"> -->
             </div>
           </div>
 
