--- a/src/app/main/main-content/about-partners/about-partners.component.html
+++ b/src/app/main/main-content/about-partners/about-partners.component.html
@@ -8,7 +8,7 @@
         <h2 class="partners-title col-sm-12">Government</h2>
         <div *ngFor="let partner of partners_government$ | async" class="partner-box col-sm-12 col-md-4 col-lg-3">
           <a [href]='partner.link' class="partner-img">
-            <img default='./assets/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+            <img default='./../../../../assets/Contents/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
           </a>
           <p class="menu01 text-center">{{partner.name}}</p>
         </div>
@@ -21,7 +21,7 @@
         <h2 class="partners-title col-sm-12">Institutions</h2>
         <div *ngFor="let partner of partners_institutions$ | async" class="partner-box col-sm-12 col-md-4 col-lg-3">
           <a [href]='partner.link' class="partner-img">
-            <img default='./assets/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+            <img default='./../../../../assets/Contents/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
           </a>
           <p class="menu01 text-center">{{partner.name}}</p>
         </div>
@@ -35,7 +35,7 @@
         <h2 class="partners-title col-sm-12">Academies</h2>
         <div *ngFor="let partner of partners_academies$ | async" class="partner-box col-sm-12 col-md-4 col-lg-3">
           <a [href]='partner.link' class="partner-img">
-            <img default='./assets/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+            <img default='./../../../../assets/Contents/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
           </a>
           <p class="menu01 text-center">{{partner.name}}</p>
         </div>
@@ -48,7 +48,7 @@
         <h2 class="partners-title col-sm-12">Productions</h2>
         <div *ngFor="let partner of partners_productions$ | async" class="partner-box col-sm-12 col-md-4 col-lg-3">
           <a [href]='partner.link' class="partner-img">
-            <img default='./assets/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
+            <img default='./../../../../assets/Contents/imgs/no_image.jpg' [srcset]=" imgPath + partner.logo" [src]=" imgPath + partner.logo">
           </a>
           <p class="menu01 text-center">{{partner.name}}</p>
         </div>
