--- a/src/app/main/main-content/research-publicate/research-publicate.component.scss
+++ b/src/app/main/main-content/research-publicate/research-publicate.component.scss
@@ -40,7 +40,8 @@ hr {
         .people_name {
             font-size:0.81rem;
             margin-bottom: 1rem;
-            a {
+            p {
+                display: inline;
                 color: rgba(0,0,0,0.75);
             }
         }
