--- a/src/app/main/main-content/about-admission/about-admission.component.html
+++ b/src/app/main/main-content/about-admission/about-admission.component.html
@@ -49,8 +49,8 @@
       <div class="contact-intro">
         <h2 class="text-center">CONTACT US</h2>
         <p class="text-center">Contact us if you have any questions about VML.</p>
-        <p class="text-center">Email us if you have resume to send: <a href="#">visualmedia_at_kaist.ac.kr</a></p>
-        <p class="text-center">For student researchers, you must first apply to KAIST Graduate School of <a href="https://ct.kaist.ac.kr">Culture Technology (GSCT)</a></p>
+        <p class="text-center">Email us if you have resume to send: <a href="mailto:visualmedia@kaist.ac.kr">visualmedia@kaist.ac.kr</a></p>
+        <p class="text-center">For student researchers, you must first apply to KAIST <a href="https://ct.kaist.ac.kr">Graduate School of Culture Technology (GSCT)</a></p>
       </div>
       <!--<form class="contact-form">
         <md-input-container>
