--- a/src/app/main/main-content/archive-seminar/archive-seminar.component.scss
+++ b/src/app/main/main-content/archive-seminar/archive-seminar.component.scss
@@ -41,7 +41,8 @@ hr {
         display:flex;
         flex-flow:column;
         justify-content: space-between;
-        p {
+        a {
+            color: black;
             margin-bottom: 0.3rem;
         }
     }
