--- a/src/app/main/main-content/member-student-individual/member-student-individual.component.scss
+++ b/src/app/main/main-content/member-student-individual/member-student-individual.component.scss
@@ -24,6 +24,8 @@ p, td {
 
 .row {
     justify-content: flex-start;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 @media (max-width: 1560px) {
