--- a/src/app/main/main-content/search-result/search-result.component.html
+++ b/src/app/main/main-content/search-result/search-result.component.html
@@ -27,13 +27,15 @@
       <div class="list-box col-sm-12">
         <h2 class="list-title col-sm-12">PUBLICATIONS</h2>
 
-        <div (click)='routing("publications", publication.id, publication.type)' 
+        <!-- <div (click)='routing("publications", publication.id, publication.type)'  -->
+        <a href='./../../../../assets/test.html' target="_blank" 
         *ngFor="let publication of result_publications" class="object-box col-sm-12 col-md-6 col-lg-6 col-xl-2">
           <div class="object-desc">
             <h5>{{publication.title}}</h5>
             <p class="menu02">{{publication.year}}</p>
           </div>
-        </div>
+        <!-- </div> -->
+        </a>
       </div>
 
 
